# runtime

./: .gitignore  Cargo.toml  Plan.md  Readme.md  build_lambda_release.sh  builtin.md  byt.code-workspace  dist-mainifest.json
.github/workflows/: ci.yml  release.yml
bundler/: Cargo.toml  bundle.rs  bundle_inline.rs  lib.rs
bundler/examples/: hello.js
cli/: .gitignore  Cargo.toml  build.sh  build.ts  byt.ts  deno.jsonc  deps.ts
cli/examples/: github.ts  hello.js  mdx.tsx  satori.tsx  satori_embedded.ts
cli/examples/files/: get.js
cli/examples/hello-world/: index.ts
cli/src/: cognito_srp_auth.rs  config.rs  deploy.rs  deploy.ts  lib.rs  signup.rs  utils.ts
cli/src/wasm_patch/: index.ts
cloud/: .gitignore  cdk.json  deno.jsonc  import_map.json  jest.config.ts  package.json  pnpm-lock.yaml  response.json  tsconfig.json
cloud/constructs/: lambda-runtime.test.ts  lambda-runtime.ts
cloud/constructs/api/: index.ts
cloud/constructs/identity/: index.pre-token-trigger.ts  index.ts
cloud/constructs/inventory/: deno-bundle.ts  deno-transform.ts  index.ts  lambda-runtime.test.ts  node-bundle.ts  upload-handler.ts  upload.test.ts  upload.ts
cloud/constructs/inventory/edge/: config.json  upload.origin-request.payload.json  upload.origin-request.test.ts  upload.origin-request.ts  upload.origin-response.ts
cloud/constructs/inventory/edge/__snapshots__/: upload.origin-request.test.ts.snap
cloud/constructs/lambda-config/: handler.ts  index.ts
cloud/constructs/rust-runtime/: Cargo.toml  Readme.md  cargo.toml  test.ts
cloud/constructs/rust-runtime/.lambda-rust/: install
cloud/constructs/rust-runtime/fixtures/: base64.js  bindings.js  ddb-put-item.js  get-file.js  hello.js  list-files.js  request-response.js
cloud/constructs/rust-runtime/src/: main.rs
cloud/edge/: package.json  upload.origin-request.ts
cloud/lib/: cloud-stack.ts
cloud/lib/rust-runtime/: Readme.md  cargo.toml
cloud/lib/rust-runtime/src/: main.rs
examples/mdx-blog/: mdx.tsx
examples/mdx-blog/static/: 2023-02-hello-world.mdx
examples/open-graph-image/: satori_storage.tsx
examples/static-files/static/: hello.txt
release_tools/: gon.hcl
runtime/: Cargo.toml  lib.rs
runtime/examples/: hello.js  hello.rs
runtime/examples/hono/: index.js
runtime/examples/request/: handler.js  handler.rs  wrapper.js
runtime/myworker/: entrypoint.js  mod.rs  runtime.js
rust-cli/: Cargo.toml
rust-cli/src/: bundle.rs  config.rs  confirm.rs  deploy.rs  error.rs  lib.rs  login.rs
src/: hello.js  main.rs  runtime.js
