[workspace]
resolver = "2"
members = [
  "runtime",
  "cloud/constructs/rust-runtime"
]

[workspace.package]
authors = ["the Byt authors"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/byt-dev/runtime"

[workspace.dependencies]
byt_runtime = { version = "0.1.0", path = "./runtime" }
tokio = { version = "1", features = ["full"] }
aws-config = { version = "0.53.0" }
deno = "1.29.4"
deno_core = "0.167.0"
deno_runtime = "0.93.0"
serde = { version = "=1.0.149", features = ["derive"] }
aws-sdk-s3 = "0.23.0"