[package]
name = "byt_bundler"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Provides the byt bundler library"

[lib]
name = "byt_bundler"
path = "lib.rs"

[dependencies]
deno = { path = "../../deno/cli" }
deno_core.workspace = true
deno_runtime.workspace = true
tokio.workspace = true
serde.workspace = true
deno_ast.workspace = true
deno_emit = "0.14.0"
deno_graph = "0.42.0"
anyhow = "1.0.69"