# Copyright 2018-2023 the Deno authors. All rights reserved. MIT license.

[package]
name = "byt_runtime"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Provides the deno runtime library"

[lib]
name = "byt_runtime"
path = "lib.rs"

[[example]]
name = "hello_runtime"
path = "examples/hello.rs"

[dependencies]
deno.workspace = true
deno_core.workspace = true
deno_runtime.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
tokio.workspace = true
serde.workspace = true
deno_ast.workspace = true
byt_bundler.workspace = true
tempfile = "3.3.0"