[package]
name = "byt_cli"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Provides the byt CLI"

[[bin]]
name = "byt"
test = false
bench = false

[dependencies]
aws-config.workspace = true
aws-sdk-cognitoidentityprovider = "0.24.0"
aws-smithy-client = { version = "0.54.2", features = ["client-hyper", "rt-tokio"] }
cognito_srp = "0.1.1"
env_logger = "0.10.0"
hyper-proxy = {version = "0.9.1", default-features = false, features = ["rustls"] }
hyper = "0.14.20"
structopt = "0.3.26"
thiserror = "1.0.32"
log = "0.4.17"
tokio.workspace = true
serde.workspace = true
deno_ast = "0.23.0"
deno_emit = "0.14.0"
deno_core.workspace = true
deno_graph = "0.42.0"
anyhow = "1.0.69"
deno = { path = "../../deno/cli" }
flate2 = "1.0.24"
reqwest = "0.11.14"
confy = "0.5.1"
clap = "4.1.4"
rpassword = "7.2.0"
serde_json = "1.0.93"
